References overlapping fix with px

--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,19 +1,16 @@
 @media screen and (max-width: 768px) {
   /* .section-slider {
-    height: auto;
-    width: 100%;
-    
+    height: 100%;
   } */
 
   .section-center {
     width: 100%;
-
-    height: auto;
+    /* z-index: 1; */
     text-align: center;
     position: relative;
     /* display: flex; */
     overflow: hidden;
-    min-height: 55vh;
+    min-height: 430px;
     /* bottom: 0;
     top: 0; */
 
@@ -23,12 +20,15 @@
   article {
     /* background-color: red; */
     position: absolute;
+    /* padding: 50px; */
+    /* height: 95%; */
     /* min-height: 25vh; */
     /* overflow: hidden; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    min-height: 200px;
     /* top: 0; */
     /* left: 0; */
     /* right: 0; */
